Another tiny spacing fix

--- a/src/styles/PersonalInfo/About.scss
+++ b/src/styles/PersonalInfo/About.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
 
     min-height: 300px;
-    padding: 80px 0 30px 0;
+    padding: 70px 0 30px 0;
 }
 
 .about {
