--- a/src/styles/PersonalInfo/Name.scss
+++ b/src/styles/PersonalInfo/Name.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
 
     min-height: 100px;
-    margin: 30px 0 20px 0;
+    margin: 50px 0 20px 0;
 
     letter-spacing: 4px;
     font-size: 50px;
